fix irregular padding gaps

--- a/frontend/src/app/components/object/object-parts-list/object-parts-list.less
+++ b/frontend/src/app/components/object/object-parts-list/object-parts-list.less
@@ -61,7 +61,7 @@ object-parts-list {
 
     .blocks-table {
         text-align: center;
-        padding: 0 1.5em .75em 2em;
+        padding: 0 1.5em 0 2em;
         
         &.expended {
             display: block;
